src/objects/PPI_Household_Data__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>PPI Household Data</relationshipLabel>
        <relationshipName>PPI_Household_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Duration__c</fullName>
        <label>Interview Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPI</label>
        <referenceTo>PPI__c</referenceTo>
        <relationshipLabel>PPI Household Data</relationshipLabel>
        <relationshipName>PPI_Household_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>PPI Household Data</relationshipLabel>
        <relationshipName>PPI_Household_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Loan_Amount__c</fullName>
        <label>Total Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <label>Total Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PPI Household Data</label>
    <nameField>
        <displayFormat>PHDID-{0000000000}</displayFormat>
        <label>PPI Household Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPI Household Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>